feat: back update on model and handler
