# back/docs/swagger.json
@@ -360,7 +360,7 @@
 						"in": "body",
 						"required": true,
 						"schema": {
-							"$ref": "#/definitions/model.Diagram"
+							"$ref": "#/definitions/request.DiagramRequest"
 						}
 					}
 				],
@@ -469,8 +469,7 @@
 						"in": "body",
 						"required": true,
 						"schema": {
-							"type": "object",
-							"additionalProperties": true
+							"$ref": "#/definitions/request.DiagramRequest"
 						}
 					}
 				],
@@ -554,7 +553,7 @@
 						"in": "body",
 						"required": true,
 						"schema": {
-							"$ref": "#/definitions/model.Library"
+							"$ref": "#/definitions/request.LibraryRequest"
 						}
 					}
 				],
@@ -634,6 +633,13 @@
 							"additionalProperties": true
 						}
 					},
+					"400": {
+						"description": "Bad Request",
+						"schema": {
+							"type": "object",
+							"additionalProperties": true
+						}
+					},
 					"404": {
 						"description": "Not Found",
 						"schema": {
@@ -663,8 +669,7 @@
 						"in": "body",
 						"required": true,
 						"schema": {
-							"type": "object",
-							"additionalProperties": true
+							"$ref": "#/definitions/request.LibraryRequest"
 						}
 					}
 				],
@@ -730,7 +735,7 @@
 						"in": "body",
 						"required": true,
 						"schema": {
-							"$ref": "#/definitions/model.Model"
+							"$ref": "#/definitions/request.ModelRequest"
 						}
 					}
 				],
@@ -839,8 +844,7 @@
 						"in": "body",
 						"required": true,
 						"schema": {
-							"type": "object",
-							"additionalProperties": true
+							"$ref": "#/definitions/request.ModelRequest"
 						}
 					}
 				],
@@ -1071,7 +1075,7 @@
 						"in": "body",
 						"required": true,
 						"schema": {
-							"$ref": "#/definitions/model.Workspace"
+							"$ref": "#/definitions/request.WorkspaceRequest"
 						}
 					}
 				],
@@ -1173,7 +1177,7 @@
 						"in": "body",
 						"required": true,
 						"schema": {
-							"type": "object"
+							"$ref": "#/definitions/request.WorkspaceRequest"
 						}
 					}
 				],
@@ -1224,6 +1228,9 @@
 				"id": {
 					"type": "string"
 				},
+				"model": {
+					"$ref": "#/definitions/model.Model"
+				},
 				"modelId": {
 					"type": "string"
 				},
@@ -1258,10 +1265,19 @@
 				"id": {
 					"type": "string"
 				},
+				"models": {
+					"type": "array",
+					"items": {
+						"$ref": "#/definitions/model.Model"
+					}
+				},
 				"title": {
 					"type": "string"
 				},
 				"updatedAt": {
+					"type": "string"
+				},
+				"userId": {
 					"type": "string"
 				}
 			}
@@ -1282,6 +1298,9 @@
 					"type": "string"
 				},
 				"deletedAt": {
+					"type": "string"
+				},
+				"description": {
 					"type": "string"
 				},
 				"id": {
@@ -1332,6 +1351,18 @@
 				"id": {
 					"type": "string"
 				},
+				"libraries": {
+					"type": "array",
+					"items": {
+						"$ref": "#/definitions/model.Library"
+					}
+				},
+				"models": {
+					"type": "array",
+					"items": {
+						"$ref": "#/definitions/model.Model"
+					}
+				},
 				"password": {
 					"type": "string",
 					"maxLength": 50,
@@ -1347,6 +1378,12 @@
 					"type": "string",
 					"maxLength": 50,
 					"minLength": 3
+				},
+				"workspaces": {
+					"type": "array",
+					"items": {
+						"$ref": "#/definitions/model.Workspace"
+					}
 				}
 			}
 		},
@@ -1362,6 +1399,12 @@
 				"description": {
 					"type": "string"
 				},
+				"diagrams": {
+					"type": "array",
+					"items": {
+						"$ref": "#/definitions/model.Diagram"
+					}
+				},
 				"id": {
 					"type": "string"
 				},
@@ -1369,6 +1412,20 @@
 					"type": "string"
 				},
 				"updatedAt": {
+					"type": "string"
+				},
+				"userId": {
+					"type": "string"
+				}
+			}
+		},
+		"request.DiagramRequest": {
+			"type": "object",
+			"properties": {
+				"description": {
+					"type": "string"
+				},
+				"name": {
 					"type": "string"
 				}
 			}
@@ -1397,6 +1454,17 @@
 				}
 			}
 		},
+		"request.LibraryRequest": {
+			"type": "object",
+			"properties": {
+				"description": {
+					"type": "string"
+				},
+				"title": {
+					"type": "string"
+				}
+			}
+		},
 		"request.LoginRequest": {
 			"type": "object",
 			"properties": {
@@ -1413,6 +1481,41 @@
 			"properties": {
 				"refreshToken": {
 					"type": "string"
+				}
+			}
+		},
+		"request.ModelRequest": {
+			"type": "object",
+			"properties": {
+				"code": {
+					"type": "string"
+				},
+				"componentsJson": {
+					"type": "string"
+				},
+				"connectionsJson": {
+					"type": "string"
+				},
+				"description": {
+					"type": "string"
+				},
+				"libId": {
+					"type": "string"
+				},
+				"metadataJson": {
+					"type": "string"
+				},
+				"name": {
+					"type": "string"
+				},
+				"portInJson": {
+					"type": "string"
+				},
+				"portOutJson": {
+					"type": "string"
+				},
+				"type": {
+					"$ref": "#/definitions/enum.ModelType"
 				}
 			}
 		},
@@ -1467,6 +1570,17 @@
 			"type": "object",
 			"properties": {
 				"names": {
+					"type": "string"
+				}
+			}
+		},
+		"request.WorkspaceRequest": {
+			"type": "object",
+			"properties": {
+				"description": {
+					"type": "string"
+				},
+				"title": {
 					"type": "string"
 				}
 			}
