# back/handler/library.go
@@ -4,6 +4,7 @@ import (
 	"app/database"
 	"app/middleware"
 	"app/model"
+	"app/request"
 
 	"github.com/gofiber/fiber/v2"
 )
@@ -30,7 +31,7 @@ func SetupLibraryRoutes(app *fiber.App) {
 func getAllLibraries(c *fiber.Ctx) error {
 	db := database.DB
 	var Libraries []model.Library
-	db.Find(&Libraries)
+	db.Find(&Libraries, "user_id = ?", c.Locals("user_id").(string))
 	return c.JSON(Libraries)
 }
 
@@ -47,7 +48,7 @@ func getLibrary(c *fiber.Ctx) error {
 	id := c.Params("id")
 	db := database.DB
 	var library model.Library
-	db.Find(&library, id)
+	db.Find(&library, "user_id = ? AND id = ?", c.Locals("user_id").(string), id)
 	if library.Title == "" {
 		return c.Status(404).JSON(fiber.Map{"status": "error", "message": "No library found with ID", "data": nil})
 	}
@@ -60,17 +61,24 @@ func getLibrary(c *fiber.Ctx) error {
 // @Tags libraries
 // @Accept json
 // @Produce json
-// @Param library body model.Library true "Library data"
+// @Param library body request.LibraryRequest true "Library data"
 // @Success 201 {object} model.Library
 // @Failure 400 {object} map[string]interface{}
 // @Failure 500 {object} map[string]interface{}
 // @Router /library [post]
 func createLibrary(c *fiber.Ctx) error {
 	db := database.DB
-	library := new(model.Library)
-	if err := c.BodyParser(library); err != nil {
+	req := new(request.LibraryRequest)
+	if err := c.BodyParser(req); err != nil {
 		return c.Status(500).JSON(fiber.Map{"status": "error", "message": "Couldn't create library", "data": err})
 	}
+
+	library := model.Library{
+		Title:       req.Title,
+		Description: req.Description,
+		UserID:      c.Locals("user_id").(string),
+	}
+
 	db.Create(&library)
 	return c.JSON(library)
 }
@@ -82,13 +90,14 @@ func createLibrary(c *fiber.Ctx) error {
 // @Param id path string true "Library ID"
 // @Success 204 {object} map[string]interface{}
 // @Failure 404 {object} map[string]interface{}
+// @Failure 400 {object} map[string]interface{}
 // @Router /library/{id} [delete]
 func deleteLibrary(c *fiber.Ctx) error {
 	id := c.Params("id")
 	db := database.DB
 
 	var library model.Library
-	db.First(&library, id)
+	db.First(&library, "user_id = ? AND id = ?", c.Locals("user_id").(string), id)
 	if library.Title == "" {
 		return c.Status(404).JSON(fiber.Map{"status": "error", "message": "No library found with ID", "data": nil})
 	}
@@ -103,7 +112,7 @@ func deleteLibrary(c *fiber.Ctx) error {
 // @Accept json
 // @Produce json
 // @Param id path string true "Library ID"
-// @Param updateData body map[string]interface{} true "Fields to update"
+// @Param updateData body request.LibraryRequest true "Fields to update"
 // @Success 200 {object} model.Library
 // @Failure 400 {object} map[string]interface{}
 // @Failure 404 {object} map[string]interface{}
@@ -113,16 +122,16 @@ func patchLibrary(c *fiber.Ctx) error {
 	id := c.Params("id")
 
 	var library model.Library
-	if err := db.First(&library, "id = ?", id).Error; err != nil {
+	if err := db.First(&library, "user_id = ? AND id = ?", c.Locals("user_id").(string), id).Error; err != nil {
 		return c.Status(404).JSON(fiber.Map{"status": "error", "message": "Library not found"})
 	}
 
-	updateData := make(map[string]interface{})
-	if err := c.BodyParser(&updateData); err != nil {
+	req := new(request.LibraryRequest)
+	if err := c.BodyParser(&req); err != nil {
 		return c.Status(400).JSON(fiber.Map{"status": "error", "message": "Invalid input", "data": err.Error()})
 	}
 
-	db.Model(&library).Updates(updateData)
+	db.Model(&library).Updates(req)
 
 	return c.JSON(library)
 }
