# back/handler/workspace.go
@@ -4,6 +4,7 @@ import (
 	"app/database"
 	"app/middleware"
 	"app/model"
+	"app/request"
 
 	"github.com/gofiber/fiber/v2"
 )
@@ -12,9 +13,9 @@ import (
 func SetupWorkspaceRoutes(app *fiber.App) {
 	group := app.Group("/workspace", middleware.Protected())
 
-	group.Get("/", getAllWorkspaces)
+	group.Get("", getAllWorkspaces)
 	group.Get("/:id", getWorkspace)
-	group.Post("/", createWorkspace)
+	group.Post("", createWorkspace)
 	group.Delete("/:id", deleteWorkspace)
 	group.Patch("/:id", patchWorkspace)
 }
@@ -29,7 +30,7 @@ func SetupWorkspaceRoutes(app *fiber.App) {
 func getAllWorkspaces(c *fiber.Ctx) error {
 	db := database.DB
 	var Workspaces []model.Workspace
-	db.Find(&Workspaces)
+	db.Find(&Workspaces, "user_id = ?", c.Locals("user_id").(string))
 	return c.JSON(Workspaces)
 }
 
@@ -46,7 +47,7 @@ func getWorkspace(c *fiber.Ctx) error {
 	id := c.Params("id")
 	db := database.DB
 	var workspace model.Workspace
-	db.Find(&workspace, id)
+	db.Find(&workspace, "user_id = ? AND id = ?", c.Locals("user_id").(string), id)
 	if workspace.Title == "" {
 		return c.Status(404).JSON(fiber.Map{"status": "error", "message": "No workspace found with ID", "data": nil})
 	}
@@ -59,16 +60,23 @@ func getWorkspace(c *fiber.Ctx) error {
 // @Tags workspace
 // @Accept json
 // @Produce json
-// @Param workspace body model.Workspace true "Workspace object"
+// @Param workspace body request.WorkspaceRequest true "Workspace object"
 // @Success 201 {object} model.Workspace
 // @Failure 500 {object} map[string]interface{}
 // @Router /workspace [post]
 func createWorkspace(c *fiber.Ctx) error {
 	db := database.DB
-	workspace := new(model.Workspace)
-	if err := c.BodyParser(workspace); err != nil {
+	req := new(request.WorkspaceRequest)
+	if err := c.BodyParser(req); err != nil {
 		return c.Status(500).JSON(fiber.Map{"status": "error", "message": "Couldn't create workspace", "data": err})
 	}
+
+	workspace := model.Workspace{
+		Title:       req.Title,
+		Description: req.Description,
+		UserID:      c.Locals("user_id").(string),
+	}
+
 	db.Create(&workspace)
 	return c.JSON(workspace)
 }
@@ -86,7 +94,7 @@ func deleteWorkspace(c *fiber.Ctx) error {
 	db := database.DB
 
 	var workspace model.Workspace
-	db.First(&workspace, id)
+	db.First(&workspace, "user_id = ? AND id = ?", c.Locals("user_id").(string), id)
 	if workspace.Title == "" {
 		return c.Status(404).JSON(fiber.Map{"status": "error", "message": "No workspace found with ID", "data": nil})
 	}
@@ -101,7 +109,7 @@ func deleteWorkspace(c *fiber.Ctx) error {
 // @Accept json
 // @Produce json
 // @Param id path string true "Workspace ID"
-// @Param workspace body object true "Partial workspace update"
+// @Param workspace body request.WorkspaceRequest true "Partial workspace update"
 // @Success 200 {object} model.Workspace
 // @Failure 400 {object} map[string]interface{}
 // @Failure 404 {object} map[string]interface{}
@@ -111,16 +119,16 @@ func patchWorkspace(c *fiber.Ctx) error {
 	id := c.Params("id")
 
 	var workspace model.Workspace
-	if err := db.First(&workspace, "id = ?", id).Error; err != nil {
+	if err := db.First(&workspace, "user_id = ? AND id = ?", c.Locals("user_id").(string), id).Error; err != nil {
 		return c.Status(404).JSON(fiber.Map{"status": "error", "message": "Workspace not found"})
 	}
 
-	updateData := make(map[string]interface{})
-	if err := c.BodyParser(&updateData); err != nil {
+	req := new(request.WorkspaceRequest)
+	if err := c.BodyParser(&req); err != nil {
 		return c.Status(400).JSON(fiber.Map{"status": "error", "message": "Invalid input", "data": err.Error()})
 	}
 
-	db.Model(&workspace).Updates(updateData)
+	db.Model(&workspace).Updates(req)
 
 	return c.JSON(workspace)
 }
