# back/model/workspace.go
@@ -2,16 +2,17 @@ package model
 
 import (
 	"time"
-
-	"github.com/google/uuid"
 )
 
 // Workspace struct
 type Workspace struct {
-	ID          uuid.UUID `gorm:"type:uuid;default:uuid_generate_v4();primaryKey" json:"id"`
+	ID     string `gorm:"type:uuid;default:uuid_generate_v4();primaryKey;<-:false" json:"id"`
+	UserID string `gorm:"type:uuid" json:"userId"`
+
 	Title       string    `gorm:"not null" json:"title"`
 	Description string    `gorm:"not null" json:"description"`
 	CreatedAt   time.Time `gorm:"type:timestamp;default:now()" json:"createdAt"`
 	UpdatedAt   time.Time `gorm:"type:timestamp;default:now()" json:"updatedAt"`
 	DeletedAt   time.Time `gorm:"index" json:"deletedAt"`
+	Diagrams    []Diagram `gorm:"foreignKey:WorkspaceID;constraint:OnDelete:CASCADE;" json:"diagrams"`
 }
