# back/request/diagram.go
@@ -1,1 +1,7 @@
 package request
+
+// DiagramRequest struct
+type DiagramRequest struct {
+	Name        string `json:"name"`
+	Description string `json:"description"`
+}
