# back/request/library.go
@@ -1,1 +1,7 @@
 package request
+
+// LibraryRequest struct
+type LibraryRequest struct {
+	Title       string `json:"title"`
+	Description string `json:"description"`
+}
